feat: add checkout service and edge gateway with production tweaks
- Add checkout service with promise-graph DAG and SAGA compensations
  * Reserve → [Price, Tax] → Pay → Confirm flow
  * Automatic rollbacks on failure (Release, Void)
  * In-memory inventory and order tracking
  * Real-time status streaming

- Add edge-gateway HTTP/SSE bridge
  * REST endpoints: /api/search, /api/quote, /api/checkout
  * SSE streaming for real-time quotes and checkout status
  * Token bucket rate limiting (100 QPS default)
  * Request ID propagation for tracing
  * CORS support for cross-origin UIs

- Production improvements
  * DTOs for clean JSON serialization
  * Dynamic gRPC request ID interceptor
  * SSE heartbeats to keep connections alive
  * Proper executor shutdown hooks
  * Per-call gRPC deadlines (1.5s pricing, 2s checkout)
  * Quote API mode=best (default) for JMeter testing

--- a/checkout/Dockerfile
+++ b/checkout/Dockerfile
@@ -5,16 +5,16 @@ FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 
 # Copy the fat JAR
-COPY target/vendor-pricing-*.jar app.jar
+COPY target/checkout-*.jar app.jar
 
 # Expose the default port
-EXPOSE 9100
+EXPOSE 9200
 
 # Set environment variables with defaults
-ENV PORT=9100
-ENV VENDORS="localhost:9101:FastVendor,localhost:9102:SlowVendor"
+ENV PORT=9200
 
 # Health check will be handled by Docker Compose in Step 7
 
 # Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
+
