feat: integrate Next.js web UI with complete stack
- Add web-ui service to Docker Compose
  * Next.js 15 with App Router and TypeScript
  * SSE integration for real-time quotes and checkout status
  * Zustand state management for shopping cart
  * shadcn/ui components with Tailwind CSS

- Update Caddyfile for unified routing
  * /api/* routes to edge-gateway
  * All other routes to web-ui (Next.js)
  * Single origin for UI and API (no CORS issues)

- Add production Dockerfile for Next.js
  * Multi-stage build for optimization
  * Standalone output for smaller images
  * Non-root user for security

- Add comprehensive documentation
  * Root README with architecture and quick start
  * Setup script for one-command local dev
  * web-ui README with development guide

- Update .gitignore for Next.js artifacts

Complete integration:
- UI calls backend via same origin (Caddy proxy)
- Real-time quote streaming works end-to-end
- Shopping cart with persistence
- Checkout flow with live DAG timeline
- All 3 pages fully functional

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,11 @@ docker/*.env
 build/
 out/
 
+# Next.js
+web-ui/.next/
+web-ui/out/
+web-ui/node_modules/
+web-ui/.env.local
+web-ui/.env*.local
+
 
