--- a/infra/Caddyfile
+++ b/infra/Caddyfile
@@ -1,12 +1,22 @@
-# Simple reverse proxy to edge-gateway
+# Reverse proxy for DealCart+ UI and API
 :80 {
     # Health check endpoint for Docker
     route /caddy-health {
         respond 200
     }
     
-    # Proxy all other requests to edge-gateway
-    reverse_proxy edge-gateway:8080
+    # API routes go to edge-gateway
+    route /api/* {
+        reverse_proxy edge-gateway:8080
+    }
+    
+    # Actuator health check
+    route /actuator/* {
+        reverse_proxy edge-gateway:8080
+    }
+    
+    # All other routes (UI) go to Next.js app
+    reverse_proxy web-ui:3000
     
     # Enable logging
     log {
@@ -17,7 +27,7 @@
     # Add server header
     header Server "DealCart+"
     
-    # CORS headers (redundant with edge-gateway but good practice)
+    # CORS headers
     header Access-Control-Allow-Origin *
     header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
     header Access-Control-Allow-Headers *
