--- a/vendor-pricing/pom.xml
+++ b/vendor-pricing/pom.xml
@@ -23,7 +23,7 @@
       <version>${project.version}</version>
     </dependency>
     
-    <!-- gRPC server dependencies -->
+    <!-- gRPC server dependencies - use grpc-netty-shaded only -->
     <dependency>
       <groupId>io.grpc</groupId>
       <artifactId>grpc-netty-shaded</artifactId>
@@ -68,6 +68,7 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>dev.dealcart.pricing.VendorPricingServer</mainClass>
                 </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
               </transformers>
             </configuration>
           </execution>
