--- a/web-ui/Dockerfile
+++ b/web-ui/Dockerfile
@@ -9,7 +9,7 @@ COPY package.json pnpm-lock.yaml* ./
 
 # Install pnpm and dependencies
 RUN npm install -g pnpm && \
-    pnpm install --frozen-lockfile
+    pnpm install --no-frozen-lockfile
 
 # Stage 2: Build
 FROM node:20-alpine AS builder
