feat: add adaptive thread pool autoscaling to vendor-pricing
Autoscale-Lite Implementation:
- AdaptiveThreadPool dynamically scales threads based on p95 latency
- Scales up when p95 > target (250ms default)
- Scales down when p95 < lower threshold (200ms default)
- Min 8, max 64 threads, step size 8
- Controller runs every 5 seconds
- Tracks last 2000 latency samples for p95 calculation

Implementation Details:
- Force Netty transport with NettyChannelBuilder.forAddress()
- Use adaptivePool.executor() in CompletableFuture.runAsync()
- Record latency around each vendor RPC call
- Start/stop controller in server lifecycle
- Log scaling decisions (SCALE UP/DOWN with metrics)

Environment Variables (docker-compose.yml):
- ADAPTIVE_MIN: 8 (minimum threads)
- ADAPTIVE_MAX: 64 (maximum threads)
- ADAPTIVE_STEP: 8 (threads to add/remove per adjustment)
- TARGET_P95_MS: 250 (scale up threshold)
- LOWER_P95_MS: 200 (scale down threshold)
- LAT_WINDOW: 2000 (latency samples to track)

Ready for 100K request load testing with automatic resource adaptation!
Tested: Autoscaler starts, quotes stream successfully, latency tracked.

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     networks:
       - dealcart
 
-  # Vendor Pricing Aggregator
+  # Vendor Pricing Aggregator (with Autoscaling)
   vendor-pricing:
     build:
       context: ../vendor-pricing
@@ -48,6 +48,13 @@ services:
     environment:
       - PORT=9100
       - VENDORS=vendor-mock-1:9101:amz,vendor-mock-2:9102:bb
+      # Autoscaling configuration
+      - ADAPTIVE_MIN=8
+      - ADAPTIVE_MAX=64
+      - ADAPTIVE_STEP=8
+      - TARGET_P95_MS=250
+      - LOWER_P95_MS=200
+      - LAT_WINDOW=2000
     restart: unless-stopped
     depends_on:
       vendor-mock-1:
