--- a/vendor-pricing/pom.xml
+++ b/vendor-pricing/pom.xml
@@ -42,6 +42,13 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
     </dependency>
+    
+    <!-- JSON serialization for metrics -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.15.2</version>
+    </dependency>
   </dependencies>
 
   <build>
