--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,10 +63,11 @@ jobs:
           declare -a SVC=("vendor-mock" "vendor-pricing" "checkout" "edge-gateway" "web-ui")
           for s in "${SVC[@]}"; do
             echo "Building and pushing $s..."
-            echo "Building from directory: ./$s"
+            echo "Building from project root with context: ./$s"
             if [ -d "./$s" ]; then
               echo "Directory exists, proceeding with build..."
-              docker build -t $REPO-$s:$SHA -t $REPO-$s:latest ./$s
+              # Build from project root so Docker can access target/ directory
+              docker build -f ./$s/Dockerfile -t $REPO-$s:$SHA -t $REPO-$s:latest .
               docker push $REPO-$s:$SHA
               docker push $REPO-$s:latest
               echo "Successfully built and pushed $s"
