Add Maven build debugging to identify target/ directory issue
- Remove -q flag from Maven to show build output
- Add target/ directory listing after Maven build
- Add JAR file search to verify build artifacts
- This will help identify why target/ directory is missing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,13 @@ jobs:
           key: maven-${{ hashFiles('**/pom.xml') }}
       
       - name: Build Maven projects
-        run: ./mvnw -q -DskipTests package
+        run: |
+          echo "Building Maven projects..."
+          ./mvnw -DskipTests package
+          echo "Maven build completed. Checking target directory..."
+          ls -la target/
+          echo "Target directory contents:"
+          find target/ -name "*.jar" -type f
       
       - name: Login to GHCR
         uses: docker/login-action@v3
