Fix debugging script to check correct service target directories
- Remove root-level target/ directory check that was causing error
- Add checks for individual service target directories (vendor-mock/target/, etc.)
- Add JAR file search to verify build artifacts exist
- This should show the actual JAR files that were built successfully

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,17 @@ jobs:
         run: |
           echo "Building Maven projects..."
           ./mvnw -DskipTests package
-          echo "Maven build completed. Checking target directory..."
-          ls -la target/
-          echo "Target directory contents:"
-          find target/ -name "*.jar" -type f
+          echo "Maven build completed. Checking service target directories..."
+          echo "Vendor-mock target:"
+          ls -la vendor-mock/target/
+          echo "Vendor-pricing target:"
+          ls -la vendor-pricing/target/
+          echo "Checkout target:"
+          ls -la checkout/target/
+          echo "Edge-gateway target:"
+          ls -la edge-gateway/target/
+          echo "All JAR files:"
+          find . -name "*.jar" -type f | grep target
       
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -57,8 +64,6 @@ jobs:
           echo "Repository: $REPO"
           echo "SHA: $SHA"
           echo "Current directory: $(pwd)"
-          echo "Target directory contents:"
-          ls -la target/
           
           declare -a SVC=("vendor-mock" "vendor-pricing" "checkout" "edge-gateway" "web-ui")
           for s in "${SVC[@]}"; do
