--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Load Testing Results
+loadtest/*.jtl
+loadtest/results-*/
+loadtest/*.log
 
 # IDEs
 .idea/
